fixed scroll list overflow bug

--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -6,6 +6,10 @@
     height: calc(100% - 7rem - 3.5rem);
 }
 
+.sidebarWrapperChildrenHeight {
+    height: calc(100% - 4rem);
+}
+
 .hideScrollbar::-webkit-scrollbar {
     display: none;
 }
